[package]
name = "sovereign_vault"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sovereign_vault"
path = "src/main.rs"

[[bin]]
name = "vault"
path = "src/bin/vault.rs"

[lib]
name = "sovereign_vault"
path = "src/lib.rs"

[dependencies]
raptorq = "2.0"
blake3 = "1.5"
rand = "0.8"
reed-solomon-erasure = "6.0.0"
rayon = "1.12.0"
tokio = { version = "1.51.1", features = ["full"] }
axum = "0.8.8"
tower = "0.5.3"
hyper = "1.9.0"
bytes = "1.11.1"
uuid = { version = "1.23.0", features = ["v4"] }
chrono = "0.4.44"
quick-xml = "0.39.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
rocksdb = "0.22"
cudarc = { version = "0.12", features = ["cuda-12060"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.11.0"
hex = "0.4.3"
md-5 = "0.11.0"

[profile.release]
opt-level = 3

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "s3_gateway"
path = "src/bin/s3_gateway.rs"

[[bin]]
name = "nanopore_benchmark"
path = "src/bin/nanopore_benchmark.rs"

[[bin]]
name = "profiler"
path = "src/bin/profiler.rs"

[[bin]]
name = "total_recall"
path = "src/bin/total_recall.rs"

[[bin]]
name = "twist_test"
path = "src/bin/twist_test.rs"

[[bin]]
name = "gpu_bench"
path = "src/bin/gpu_bench.rs"
